--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -19,5 +19,6 @@
 
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLh2_PpmwPEybHZp4whBMxsVDiwfvfntg&libraries=places&callback=initAutocomplete" async defer></script>
   </body>
 </html>
