--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -18,7 +18,7 @@
       </main>
 
     </div> <!-- /container -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCKSYRuuikPB_INW1htNDvwrpmDNzFl1M&libraries=places"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLh2_PpmwPEybHZp4whBMxsVDiwfvfntg&libraries=places&callback=initAutocomplete" async defer></script>
   </body>
 </html>
