--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,84 +1,88 @@
-* {
-  box-sizing: border-box;
-}
-html {
-  font-size: 12px;
+/* ----------- iPhone 5 and 5S ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
 }
 
-.dont-render-dawg {
-  position: absolute;
-  height: 0;
-  width: 0;
+/* Portrait */
+@custom-media --iphone5-portrait (min-device-width: 320px)
+    and (max-device-width: 568px)
+    and (-webkit-min-device-pixel-ratio: 2)
+    and (orientation: portrait);
+
+@media (--iphone5-portrait) {
+    .main-nav {
+        display: flex;
+    }
 }
 
-.main-nav {
-  background: #eee;
-  ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style: none;
-  }
-  a {
-    padding: 1.25rem 0.5rem;
-    font-size: 1.6rem;
-    max-width: 140px;
-    font-weight: bold;
-    text-decoration: none;
-    display: flex;
-    align-items: flex-start;
-    color: #333;
-    &:hover, &:focus {
-      background: #ccc;
-      color: black;
-      svg {
-        fill: green; 
-      }
-      span {
-        color: black; 
-      }
-    }
-  }
-  span {
-    display: block;
-    font-size: 1rem;
-    font-weight: normal;
-    color: #888;
-    margin: 0.25rem 0 0 0;
-  }
-  .icon {
-    width: 40px;
-    height: 40px;
-    float: left;
-    margin-right: 1rem;
-    fill: #999;
-  }
-  &.outlines {
-    * {
-      outline: 1px solid rgba(red, 0.5); 
-    }
-  }
+/* Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
 }
 
-.options {
-  text-align: center;
-  padding: 2rem 0;
-  select {
-    margin-right: 2rem;
-  }
+/* ----------- iPhone 6 ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+
 }
 
-@media (min-width: 1000px) {
-  .main-nav {
-    a {
-      max-width: 500px;
-      font-size: 2rem; 
-    }
-    .icon {
-      width: 25px;
-      height: 25px;
-    }
-  }
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+
 }
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+
+}
+
+/* ----------- iPhone 6+ ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) { 
+
+}
+
+
