--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -6,7 +6,7 @@
     /* main colors */
     --black: #212121;
     --red: #C75142;
-    --white: #FFFFFF;
+    --white: #fefbf7;
     --green: #8FAA9D;
     --grey: #D4D4D4;
 }
@@ -65,6 +65,48 @@
             align-self: center;
 			transition: all 0.5s ease;
         }
+    }
+}
+
+.w-background {
+    background-color: var(--white)
+}
+
+.full-width {
+    width: 100%
+}
+
+.main-table {
+
+    width: 100%;
+
+    & th {
+        font-weight: 600;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+        background-color: var(--black);
+        text-align: left;
+        padding-top: 1.0rem;
+        padding-bottom: 1.0rem;
+        background: var(--white);
+    }
+
+    & thead {
+    }
+
+    & tbody {
+        line-height: 1.5;
+    }
+
+    & td {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        padding-right: 1rem;
+
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+
+        border-color: var(--black);
     }
 }
 
