modified css white var

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -6,7 +6,7 @@
     /* main colors */
     --black: #212121;
     --red: #C75142;
-    --white: #fefbf7;
+    --white: #f5f5f5;
     --green: #8FAA9D;
     --grey: #D4D4D4;
 }
