--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -69,29 +69,40 @@
 }
 
 .w-background {
-    background-color: var(--white)
+    background-color: var(--white);
 }
 
 .full-width {
-    width: 100%
+    width: 100%;
 }
 
 .main-table {
 
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+
+    & thead {
+        display: flex;
+    }
 
     & th {
+        display: flex;
+        flex-grow: 1;
         font-weight: 600;
         border-bottom-style: solid;
         border-bottom-width: 1px;
-        background-color: var(--black);
-        text-align: left;
-        padding-top: 1.0rem;
-        padding-bottom: 1.0rem;
-        background: var(--white);
+        padding-left: 1rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
     }
 
-    & thead {
+    & tr {
+        width: 100%;
+        display: flex;
+        flex-grow: 1;
+        flex-basis: 0;
     }
 
     & tbody {
@@ -99,9 +110,13 @@
     }
 
     & td {
+        display: flex;
+        flex-grow: 1;
+        flex-basis: 0;
         padding-top: 1rem;
-        padding-bottom: 1rem;
+        padding-bottom: 0.5rem;
         padding-right: 1rem;
+        padding-left: 1rem;
 
         border-bottom-style: solid;
         border-bottom-width: 1px;
