--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -90,12 +90,14 @@
     & th {
         display: flex;
         flex-grow: 1;
+        flex-basis: 0;
         font-weight: 600;
         border-bottom-style: solid;
         border-bottom-width: 1px;
         padding-left: 1rem;
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
+        padding-right: 1rem;
+        padding-top: 0.7rem;
+        padding-bottom: 0.7rem;
     }
 
     & tr {
@@ -113,10 +115,7 @@
         display: flex;
         flex-grow: 1;
         flex-basis: 0;
-        padding-top: 1rem;
-        padding-bottom: 0.5rem;
-        padding-right: 1rem;
-        padding-left: 1rem;
+        padding: 1rem;
 
         border-bottom-style: solid;
         border-bottom-width: 1px;
