--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,5 +1,7 @@
 @import './normalize.css';
+@import './global.css';
 @import '~font-awesome/css/font-awesome.min.css';
+
 
 /* general case */
 :root {
@@ -76,8 +78,34 @@
     width: 100%;
 }
 
-.main-table {
+.left-padding {
+    padding-left: 1rem;
+}
 
+.padding {
+    padding: 1rem;
+}
+
+.padding-2 {
+    padding: 2rem;
+}
+
+.lr-padding {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.left-margin {
+    margin-left: 1rem;
+}
+
+.flex-center {
+    display: flex;
+    align-content: center;
+}
+
+
+#main-table {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -92,8 +120,6 @@
         flex-grow: 1;
         flex-basis: 0;
         font-weight: 600;
-        /* border-bottom-style: solid; */
-        /* border-bottom-width: 1px; */
         padding-left: 1rem;
         padding-right: 1rem;
         padding-top: 0.7rem;
@@ -120,11 +146,6 @@
         flex-grow: 1;
         flex-basis: 0;
         padding: 1rem;
-
-        /* border-bottom-style: solid; */
-        /* border-bottom-width: 1px; */
-
-        /* border-color: var(--black); */
     }
 }
 
