--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -41,33 +41,23 @@
 
 @media (--iphone5-portrait) {
 
-    .main-nav {
-        display: flex;
-		padding: 1.5rem;
-		align-items: center;
-		justify-content: space-between;
+}
 
-        color: var(--black);
-        background-color: var(--red);
+#main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-        & .mobile-nav-list {
-			display: flex;
-			justify-content: space-between;
-            list-style-type: none;
-			margin: 0;
-        }
+    color: var(--black);
+    background-color: var(--red);
+}
 
-		& .mobile-menu-item {
-			font-size: 0.8rem;
-			padding: 0.5rem;
-		}
-
-        & .mobile-menu {
-            font-size: 1.5rem;
-            align-self: center;
-			transition: all 0.5s ease;
-        }
-    }
+#mobile-nav-list {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .w-background {
@@ -80,6 +70,14 @@
 
 .left-padding {
     padding-left: 1rem;
+}
+
+.padding-05 {
+    padding: 0.5rem;
+}
+
+.padding-15{
+    padding: 1.5rem;
 }
 
 .padding {
