--- a/web/static/css/global.css
+++ b/web/static/css/global.css
@@ -1,5 +1,13 @@
+:root {
+    /* main colors */
+    --black: #212121;
+    --red: #C75142;
+    --white: #f5f5f5;
+    --green: #8FAA9D;
+    --grey: #D4D4D4;
+}
+
 input {
     background-color: var(--white);
     width: 100%;
-    height: 100%;
 }
