--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -13,6 +13,16 @@
     --grey: #D4D4D4;
 }
 
+p {
+	margin: 0;
+}
+
+body {
+	background-color: var(--white);
+}
+
+
+
 /* keep the menu burger item hidden when it isn't mobile view */
 .main-nav-list {
     list-style-type: none;
@@ -60,12 +70,20 @@
     margin: 0;
 }
 
+.bg-grey {
+	background-color: var(--grey);
+}
+
 .w-background {
     background-color: var(--white);
 }
 
 .full-width {
     width: 100%;
+}
+
+.margin {
+	margin: 1rem;
 }
 
 .left-padding {
@@ -97,9 +115,17 @@
     margin-left: 1rem;
 }
 
+.flex {
+	display: flex;
+}
+
 .flex-center {
-    display: flex;
     align-content: center;
+	justify-content: center;
+}
+
+.flex-col {
+	flex-direction: column;
 }
 
 
